[gd_scene load_steps=3 format=3 uid="uid://lykhjbqcmwof"]

[ext_resource type="Texture2D" uid="uid://d0kw2ldkcn56a" path="res://Assets/PlaceholderStairs.png" id="1_u7ia5"]
[ext_resource type="Script" path="res://Buildings/ToolbarStaircase.gd" id="2_2k5tx"]

[node name="Staircase" type="Sprite2D"]
texture = ExtResource("1_u7ia5")
centered = false
script = ExtResource("2_2k5tx")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[connection signal="gui_input" from="Control" to="." method="_on_control_gui_input"]
[connection signal="mouse_entered" from="Control" to="." method="_on_control_mouse_entered"]
[connection signal="mouse_exited" from="Control" to="." method="_on_control_mouse_exited"]
